# dutil

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  publish.yaml
dutil/pipeline/: _cached.py  _dask.py
dutil/src/: persist.py
dutil/stats/: __init__.py
dutil/string/: _string.py
scripts/: version.py
tests/: test_persist.py  test_pipeline.py
